--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ categories = ["external-ffi-bindings", "network-programming"]
 links = "usrsctp"
 build = "build.rs"
 
+[badges]
+travis-ci = { repository = "endoli/usrsctp-sys.rs", branch = "master" }
+
 [dependencies]
 libc = "0.2.36"
 
